--- a/saee.css
+++ b/saee.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: "Poppins", sans-serif;
-   background: url(background.jpg) no-repeat center center fixed;
+   background: url(us.jpg) no-repeat center center fixed;
 background-size: cover;
     min-height: 100vh;
     display: flex;
