--- a/saee.css
+++ b/saee.css
@@ -55,7 +55,7 @@ background-size: cover;
 
 /* Glow Text */
 .glow {
-    text-shadow: 0px 0px 12px #ff2e63;
+    text-shadow: 12px 12px 12px #ff2e63;
 }
 
 .title {
@@ -112,7 +112,13 @@ button:hover {
 .question {
     display: none;
     margin-top: 20px;
+    background: rgba(255, 255, 255, 0.3); /* transparent */
+    padding: 20px;
+    border-radius: 12px;
+    backdrop-filter: blur(6px); /* smooth blur */
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1); /* subtle shadow */
 }
+
 
 /* Final Message */
 .final-message {
