--- a/saee.css
+++ b/saee.css
@@ -55,8 +55,7 @@ background-size: cover;
 
 /* Glow Text */
 .glow {
-    text-shadow: 0
-        px 0px 12px #ff2e63;
+    text-shadow: 0px 0px 12px #ff2e63;
 }
 
 .title {
@@ -127,16 +126,6 @@ button:hover {
     margin-top: 20px;
     font-size: 18px;
     color: #333;
-}
-
-/* Typing Effect */
-.typing-text {
-    width: 100%;
-    overflow: hidden;
-    border-right: 3px solid #ff5e78;
-    white-space: nowrap;
-    animation: typing 3s steps(40), blink 0.7s infinite;
-}
 
 @keyframes typing {
     from { width: 0; }
